<resources>
    <string-array name="compass_direction">
        <item>N</item>
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SW</item>
        <item>W</item>
        <item>NW</item>
    </string-array>
    <string-array name="unit_types">
        <item></item>
        <item>Thousand</item>
        <item>Ten thousand</item>
        <item>Million</item>
    </string-array>
    <string-array name="loan_types">
        <item>Annuity payments</item>
        <item>Fixed payments</item>
    </string-array>
    <string-array name="conver_units">
        <item>sq. km</item>
        <item>hectares</item>
        <item>Jia(甲)</item>
        <item>Acre</item>
        <item>Are</item>
        <item>Ping(坪)</item>
        <item>sq. metre</item>
        <item>sq.ft.</item>
        <item>sq.in.</item>
        <item>sq.cm.</item>
    </string-array>
    <string-array name="detail_type">
        <item>Year</item>
        <item>Month</item>
    </string-array>

    <string name="result_short_payment">Monthly payment</string>
    <string name="result_short_interest">Total interest</string>
    <string name="result_short_amount">Total amount</string>
    <string name="result_short_button">Schedule</string>
    <string name="app_name">HousingAssistAd</string>
    <string name="app_name_pro">HousingAssist</string>
    <string name="title_activity_main">Housing Assist Ad</string>
    <string name="title_activity_pro">Housing Assist</string>
    <string name="amount">Amount</string>
    <string name="period">Period</string>
    <string name="amount_Hint">&gt;0</string>
    <string name="period_Hint">&gt;0</string>
    <string name="year">Year</string>
    <string name="loan_type">Type of Loan</string>
    <string name="interest_period">Rate </string>
    <string name="number_zero">0</string>
    <string name="tilde">~</string>
    <string name="months_Hint">&gt;0</string>
    <string name="month">Months</string>
    <string name="percent">%</string>
    <string name="rate_Hint">annual</string>
    <string name="grace_period">Grace</string>
    <string name="calculate">Calculate</string>
    <string name="clean">Clean</string>
    <string name="result_nr">Nr</string>
    <string name="result_principal">Principal</string>
    <string name="result_interest">Interest</string>
    <string name="result_payment">Payment</string>
    <string name="result_goback">Back</string>
    <string name="dialog_title_wait">please wait</string>
    <string name="dialog_body_calcelate">busy&#8230;</string>
    <string name="conver_source">Value </string>
    <string name="conver_source_unit">Unit </string>
    <string name="conver_target_unit">To </string>
    <string name="conver_result">Result </string>
    <string name="tab_converter">converter</string>
    <string name="tab_loan">loan</string>
    <string name="tab_compass">Compass</string>
    <string name="tab_evaluate">evaluate</string>
    <string name="eval_area">Building area</string>
    <string name="eval_unit_price">Unit price</string>
    <string name="eval_affiliated">Additional costs</string>
    <string name="eval_amount">Amount</string>
    <string name="eval_note">Amount = \n Additional costs  + (Building area x Unit price)</string>
    <string name="msgEdit_field_isNull">Please enter a correct value</string>
    <string name="msgCalculated">Calculated success</string>
    <string name="menu_item_clean">Clear</string>
    <string name="menu_item_swap">Swap</string>
    <string name="menu_item_sendmail">Export to Eail</string>
    <string name="menu_item_sendexcel">Export to Excel</string>
    <string name="sendEmail">Send E-mail</string>
    <string name="sendExcel">Send Excel</string>
    <string name="export">export</string>

</resources>