<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@layout/roundshape"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_short_payment"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/resultshort_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/number_zero"
        android:textColor="@color/result" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_short_interest"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/resultshort_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/number_zero"
        android:textColor="@color/result" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_short_amount"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/resultshort_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/number_zero"
        android:textColor="@color/result" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <Button
        android:id="@+id/resultshort_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_short_button" />

</LinearLayout>