<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period" />

        <EditText
            android:id="@+id/edit_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/period_Hint"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_type" />

        <Spinner
            android:id="@+id/spinner_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/loan_types" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <include
        android:id="@+id/linearLayout_grace"
        android:layout_width="wrap_content"
        layout="@layout/interest_period" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <include
        android:id="@+id/linearLayout_interest1"
        layout="@layout/interest_period" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <include
        android:id="@+id/linearLayout_interest2"
        layout="@layout/interest_period" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <include
        android:id="@+id/linearLayout_interest3"
        layout="@layout/interest_period" />

</LinearLayout>