<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amount_Hint"
                android:inputType="numberDecimal" >
            </EditText>

            <Spinner
                android:id="@+id/spinner_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/unit_types" />
        </LinearLayout>

		<include android:id="@+id/main_plan" layout="@layout/plan"/>




        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/button_clean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clean" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#FF909090" />
        
		<include android:id="@+id/ResultListView" layout="@layout/result_short"/>
    </LinearLayout>

</ScrollView>